Fix scrolling on iPhone
no issue

--- a/web/static/css/partials/_common.scss
+++ b/web/static/css/partials/_common.scss
@@ -2,6 +2,7 @@ html,
 body {
   margin:0;
   padding: 0;
+  height: auto;
 }
 
 .off-canvas-wrapper, .off-canvas {
